# self-extract

./: .gitignore  .hlint.yaml  CHANGELOG.md  DEVELOPER.md  README.md  package.yaml  self-extract.cabal  stack.yaml
.circleci/: config.yml
example/: Setup.hs  foo.cabal
example/basic/: Example.hs  Main.hs  README.md  Setup.hs  build.sh  self-extract-basic.cabal
example/cabal/: README.md  Setup.hs  self-extract-cabal.cabal
exe/: Bundle.hs
scripts/: install-system-deps.sh  stylish-haskell.sh
src/Codec/: SelfExtract.hs
src/Codec/SelfExtract/: Distribution.hs  Tar.hs
