name:                self-extract
version:             0.1.0.0
license:             AllRightsReserved
author:              Brandon Chinn
maintainer:          brandon@leapyear.io
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Codec.SelfExtract
                       Codec.SelfExtract.Distribution
                       Codec.SelfExtract.Tar
  build-depends:       base >= 4.7 && < 5
                     , Cabal
                     , binary
                     , bytestring
                     , extra
                     , file-embed
                     , path
                     , path-io
                     , process
                     , unix-compat
  ghc-options: -O2 -fPIC
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Wredundant-constraints -Wnoncanonical-monad-instances -Werror
